--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   },
   "scripts": {
     "start": "react-app-rewired start HOST=192.168.88.249",
+    "prod": ".env.production react-app-rewired start HOST=192.168.88.249",
     "build": "react-app-rewired build",
     "test": "react-app-rewired test",
     "eject": "react-scripts eject"
