네트워크 변경 작업중

--- a/.env.production
+++ b/.env.production
@@ -1,5 +1,7 @@
 SKIP_PREFLIGHT_CHECK=true
 REACT_APP_SOLANA_CLUSTER_TARGET=mainnet-beta
 REACT_APP_SOLANA_CLUSTER_RPC_ENDPOINT=https://api.mainnet-beta.solana.com
+REACT_APP_SOLANA_CLUSTER_RPC_ENDPOINT_DEV=https://api.devnet.solana.com
+REACT_APP_SOLANA_CLUSTER_RPC_ENDPOINT_MAIN=https://api.mainnet-beta.solana.com
 REACT_APP_TOKEN_PROGRAM_ACCOUNT=TokenkegQfeZyiNwAJbNbGKPFXCWuBvf9Ss623VQ5DA
 REACT_APP_TOKEN_CREATE_ACCOUNT_FEE=0.00203928
