--- a/.env.production
+++ b/.env.production
@@ -1,5 +1,7 @@
 SKIP_PREFLIGHT_CHECK=true
 REACT_APP_SOLANA_CLUSTER_TARGET=mainnet-beta
+REACT_APP_SOLANA_CLUSTER_TARGET_MAIN=mainnet-beta
+REACT_APP_SOLANA_CLUSTER_TARGET_DEV=devnet
 REACT_APP_SOLANA_CLUSTER_RPC_ENDPOINT=https://api.mainnet-beta.solana.com
 REACT_APP_SOLANA_CLUSTER_RPC_ENDPOINT_DEV=https://api.devnet.solana.com
 REACT_APP_SOLANA_CLUSTER_RPC_ENDPOINT_MAIN=https://api.mainnet-beta.solana.com
