--- a/package.json
+++ b/package.json
@@ -3,28 +3,40 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@aws-sdk/shared-ini-file-loader": "^3.127.0",
     "@headlessui/react": "^1.6.2",
     "@mdi/js": "^6.7.96",
     "@mdi/react": "^1.6.0",
+    "@metaplex-foundation/js": "^0.11.7",
+    "@metaplex-foundation/mpl-token-metadata": "^2.2.1",
+    "@metaplex/js": "^4.12.0",
     "@solana/spl-token": "^0.2.0",
+    "@solana/spl-token-registry": "^0.2.4574",
     "@solana/web3.js": "^1.41.6",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
+    "assert": "^2.0.0",
+    "aws-crt": "^1.12.5",
     "axios": "^0.21.4",
     "bip39": "^3.0.4",
     "bs58": "^5.0.0",
+    "crypto-browserify": "^3.12.0",
     "customize-cra": "^1.0.0",
     "ed25519-hd-key": "^1.2.0",
+    "fs": "^0.0.1-security",
     "generate-avatar": "^1.4.10",
+    "http2": "^3.3.7",
     "react": "^18.1.0",
     "react-app-rewired": "^2.2.1",
     "react-dom": "^18.1.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "4.0.3",
     "react-toastify": "^9.0.1",
+    "stream-browserify": "^3.0.0",
     "tweetnacl": "^1.0.3",
     "uint8arrays": "^3.0.0",
+    "util": "^0.12.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -32,7 +44,7 @@
     "prod": ".env.production react-app-rewired start HOST=192.168.88.220",
     "build": "react-app-rewired build",
     "test": "react-app-rewired test",
-    "eject": "react-scripts eject"
+    "eject": "react-app-rewired eject"
   },
   "eslintConfig": {
     "extends": [
