메인넷 주소 변경

--- a/.env.development
+++ b/.env.development
@@ -4,6 +4,6 @@ REACT_APP_SOLANA_CLUSTER_TARGET_MAIN=mainnet-beta
 REACT_APP_SOLANA_CLUSTER_TARGET_DEV=devnet
 REACT_APP_SOLANA_CLUSTER_RPC_ENDPOINT=https://bold-restless-valley.solana-mainnet.discover.quiknode.pro/c49a6efe05141ebc25d88512f7107b7378b73245
 REACT_APP_SOLANA_CLUSTER_RPC_ENDPOINT_DEV=https://bold-restless-valley.solana-mainnet.discover.quiknode.pro/c49a6efe05141ebc25d88512f7107b7378b73245
-REACT_APP_SOLANA_CLUSTER_RPC_ENDPOINT_MAIN=https://api.mainnet-beta.solana.com
+REACT_APP_SOLANA_CLUSTER_RPC_ENDPOINT_MAIN=https://bold-restless-valley.solana-mainnet.discover.quiknode.pro/c49a6efe05141ebc25d88512f7107b7378b73245
 REACT_APP_TOKEN_PROGRAM_ACCOUNT=TokenkegQfeZyiNwAJbNbGKPFXCWuBvf9Ss623VQ5DA
 REACT_APP_TOKEN_CREATE_ACCOUNT_FEE=0.00203928
